--- a/IndiabanaApp/app/src/main/AndroidManifest.xml
+++ b/IndiabanaApp/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".Activities.AddProduct.AddProductPriceActivity" />
+        <activity android:name=".Activities.AddProduct.AddProductAmountActivity" />
     </application>
 
 </manifest>
