--- a/IndiabanaApp/app/src/main/AndroidManifest.xml
+++ b/IndiabanaApp/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".Activities.AddProduct.AddProductPriceActivity" />
         <activity android:name=".Activities.AddProduct.AddProductAmountActivity" />
         <activity android:name=".Activities.AddProduct.AddProductShippingActivity" />
+        <activity android:name=".Activities.AddProduct.AddProductConditionActivity" />
     </application>
 
 </manifest>
