--- a/IndiabanaApp/app/src/main/AndroidManifest.xml
+++ b/IndiabanaApp/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Activities.AddProduct.AddProductAmountActivity" />
         <activity android:name=".Activities.AddProduct.AddProductShippingActivity" />
         <activity android:name=".Activities.AddProduct.AddProductConditionActivity" />
+        <activity android:name=".Activities.AddProduct.AddProductDatasheetActivity" />
     </application>
 
 </manifest>
