--- a/IndiabanaApp/app/src/main/AndroidManifest.xml
+++ b/IndiabanaApp/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".Activities.AddProduct.AddProductPriceActivity" />
         <activity android:name=".Activities.AddProduct.AddProductAmountActivity" />
+        <activity android:name=".Activities.ProductActivity"/>
     </application>
 
 </manifest>
