Purchase item user feedback UI. done

--- a/IndiabanaApp/app/src/main/AndroidManifest.xml
+++ b/IndiabanaApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Indiabana">
-        <activity android:name=".Activities.PotentialAlliancesItemActivity"></activity>
+        <activity android:name=".Activities.RatePurchase.BuyerOrderProblem"></activity>
+        <activity android:name=".Activities.PotentialAlliancesItemActivity" />
         <activity android:name=".Activities.AllianceRequestActivityTemp" />
         <activity android:name=".Activities.AllianceRequestActivity" />
         <activity android:name=".Activities.CartActivity" />
@@ -30,7 +31,8 @@
         <activity android:name=".Activities.AddProduct.AddProductShippingActivity" />
         <activity android:name=".Activities.AddProduct.AddProductConditionActivity" />
         <activity android:name=".Activities.AddProduct.AddProductDatasheetActivity" />
-        <activity android:name=".Activities.ProductActivity"/>
+        <activity android:name=".Activities.ProductActivity" />
+        <activity android:name=".Activities.RatePurchase.RateOrderActivity" />
     </application>
 
 </manifest>
